# api/v1/subscription/router.go
@@ -3,7 +3,7 @@ package subscription
 import "github.com/gin-gonic/gin"
 
 func RegisterRouter(r *gin.RouterGroup, s *Service) {
-	endpoint := r.Group("/subscription")
+	endpoint := r.Group("/subscriptions")
 	endpoint.GET("/", s.List)
 	endpoint.GET("/:subId", s.Get)
 	endpoint.POST("/", s.Create)
